# ActiveUltraFeedback

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README copy.md  README.md  check.py  compare_dpo_subsets.py  diff_ckpt_artifacts.py  diff_ckpt_generate.py  diff_dpo_curves.py  diff_dpo_mechanics.py  dpo_comparison_10k.html  dpo_comparison_20k.html  dpo_comparison_5k.html  evaluate.sh  inspect_eos_in_mask.py  model_stats.txt  notes  playground2.py  playground3.py  playground4.py  pyproject.toml  requirements.txt  requirements_docker.txt  requirements_full.txt  verify_quota.py
activeuf/: domains.py  schemas.py  utils.py  visualizations.py
activeuf/acquisition_function/: __init__.py  arguments.py  base.py  deltaquantile.py  deltaucb.py  drts.py  dts.py  ids.py  infogain.py  infomax.py  maxminlcb.py  oracle_maxmin.py  random.py  rucb.py  ultrafeedback.py
activeuf/advanced/: likelihood_filter.py  likelihood_filter_vllm.py  run_likelihood_filter.sbatch
configs/: compute_base_model_features.yaml  cpo_training.yaml  dpo_maxmin_baseline.yaml  dpo_training.yaml  dpo_training_lora.yaml  example_loop.yaml  loop.yaml  loop_dpo.yaml  loop_old.yaml  rm_training.yaml
scripts/: dataset_model_stats.py  example.sh  loop_hp_sweep.sh  loop_train.sbatch  loop_train_eval.sbatch  mark_truncated.py  organize_all_sweeps.sh  organize_sweep_datasets.py  push_hf_datasets.sh  run_missing_evals.sh  run_missing_trainings.sh  run_missing_trainings_and_evals.sh  sweep_runner.sbatch  truncation_stats.py  update_wandb_run.py  update_wandb_sweep_runs.sh  upload_all_datasets.sh  wow.txt
(+121 files in other folders)
